examples/dev/k8s/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kibana
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  strategy: {}
  template:
    metadata:
      labels:
        app.network/my-network: "true"
        app: kibana
    spec:
      containers:
      - env:
        - name: ELASTICSEARCH_HOSTS
          value: https://odfe:9200
        - name: ELASTICSEARCH_URL
          value: https://odfe:9200
        image: example-k8s/kibana
        imagePullPolicy: "Never"
        name: odfe-kibana
        ports:
        - containerPort: 5601
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
