examples/dev/k8s/my-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: my-network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.network/my-network: "true"
  podSelector:
    matchLabels:
      app.network/my-network: "true"
