examples/dev/k8s/opendistro-for-elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: opendistro-for-elasticsearch
  name: opendistro-for-elasticsearch
spec:
  ports:
  - name: "9200"
    port: 9200
    targetPort: 9200
  - name: "9600"
    port: 9600
    targetPort: 9600
  selector:
    app: opendistro-for-elasticsearch
status:
  loadBalancer: {}
