examples/dev/k8s/sample-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-app
  name: sample-app
spec:
  ports:
  - name: "8082"
    port: 8082
    targetPort: 8082
  - name: "8083"
    port: 8083
    targetPort: 8083
  - name: "8084"
    port: 8084
    targetPort: 8084
  - name: "8085"
    port: 8085
    targetPort: 8085
  - name: "8086"
    port: 8086
    targetPort: 8086
  - name: "8087"
    port: 8087
    targetPort: 8087
  - name: "8088"
    port: 8088
    targetPort: 8088
  - name: "8089"
    port: 8089
    targetPort: 8089
  selector:
    app: sample-app
status:
  loadBalancer: {}
